required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (5.3-dev, SVN trunk):
------------------------------------

- Fixed msAddLabel may cause access violation in certain conditions

- Changed base type of labelObj size, minsize and maxsize from int to double (#2766)

- add support for WMS Server title in LAYER object (#885)

- Fixed build problem using --with-gd=static and freetype (#2697)

- RFC49 implementation (#2865)

- Fixed Blobs not filtered in OracleSpatial Attribute/WFS queries (#2829)

- Fixed memory leak of map::setProjection in PHP/MapScript (#2861)

- Fixed "internal PHP GC memory leaks" in PHP/MapScript (#2767)

- Fixed bug with wms layer group hierarchy (#2810)

- Added updateFromString() methods for several objects in PHP/Mapscript (#2298)

- Added ms_newMapObjFromString mapObj constructor in PHP/Mapscript (#2399)

- Add support to compile mssql2008 when SDE or ORACLE is not compiled (#2851)

- Add support for creating debug builds for the plugins on Windows

- Correct half pixel error in WMS layer's BBOX request to remote WMS (#2843)

- Expose Map/Layer's Projection objects in PHP/MapScript (#2845)

- Added getUnits() methods to projectionObj in Mapscript (#2798)

- Improved Tag parsing in template code. (#2781)

- Added hashtable object and metadata methods for php-mapscript (#2773)

- mappostgis.c: Fix trailing spaces in fixed varchar fields (#2817)

- RFC48 implementation: GEOMTRANSFORM on styleObj (#2825)

- mapwms.c: cleanup warnings with recent gcc versions (#2822)

- mapogcsos.c: Cleanup warning and error messages

- mapagg.cpp: Fix center of rotation for truetype marker symbols 

- mapowscommon.c: use msLibXml2GenerateList to generate listed XML elements
