@@ -253,29 +253,37 @@ int main(int argc, char *argv[])
 
     if(strcmp(argv[i],"-l") == 0) { /* load layer list */
       layers = msStringSplit(argv[i+1], ' ', &(num_layers));
-      layer_found=0;
+
+      for(j=0; j<num_layers; j++) { /* loop over -l */
+        layer_found=0;
+        for(k=0; k<map->numlayers; k++) {
+          if(GET_LAYER(map, k)->name && strcmp(GET_LAYER(map, k)->name, layers[j]) == 0) {
+            layer_found=1;
+            break;
+          }
+          else {
+            invalid_layer = strdup(layers[j]);
+          }
+        }
+        if (layer_found==0) {
+          fprintf(stderr, "Layer (-l) %s not found\n", invalid_layer);
+          msCleanup();
+          exit(0);
+        }
+      }
 
       for(j=0; j<map->numlayers; j++) {
 	if(GET_LAYER(map, j)->status == MS_DEFAULT)
-	  continue;
+          continue;
 	else {
 	  GET_LAYER(map, j)->status = MS_OFF;
 	  for(k=0; k<num_layers; k++) {
 	    if(GET_LAYER(map, j)->name && strcmp(GET_LAYER(map, j)->name, layers[k]) == 0) {
 	      GET_LAYER(map, j)->status = MS_ON;
-              layer_found=1;
 	      break;
 	    }
-            else {
-              invalid_layer = strdup(layers[k]);
-            }
 	  }
 	}
-      }
-      if (layer_found == 0) {
-        fprintf(stderr, "Layer (-l) %s not found\n", invalid_layer);
-        msCleanup();
-        exit(0);
       }
 
       msFreeCharArray(layers, num_layers);
